apps/wordpress/wordpress/templates/deployment.yaml
---
# Source: wordpress/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitnami-wordpress-9-3-15
  labels:
    app.kubernetes.io/name: wordpress
    helm.sh/chart: wordpress-9.3.15
    app.kubernetes.io/instance: bitnami-wordpress-9-3-15
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/instance: bitnami-wordpress-9-3-15
  strategy: 
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
        helm.sh/chart: wordpress-9.3.15
        app.kubernetes.io/instance: bitnami-wordpress-9-3-15
        app.kubernetes.io/managed-by: Helm
    spec:      
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "status.localhost"
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: wordpress
          image: docker.io/bitnami/wordpress:5.4.2-debian-10-r10
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
            httpGet:
              path: /wp-login.php
              port: http
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
            httpGet:
              path: /wp-login.php
              port: http
          volumeMounts:
            - mountPath: /bitnami/wordpress
              name: wordpress-data
              subPath: wordpress
          resources:
            limits: {}
            requests:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: bitnami-wordpress-9-3-15
