apps/wordpress/wordpress/templates/svc.yaml
---
# Source: wordpress/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp1.local-1.vm
  labels:
    app.kubernetes.io/name: wordpress
    helm.sh/chart: wordpress-9.3.15
    app.kubernetes.io/instance: bitnami-wordpress-9-3-15
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: null
    - name: https
      port: 443
      targetPort: https
      nodePort: null
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: bitnami-wordpress-9-3-15
